@@ -35,7 +35,9 @@ Object flavors initialized...
 Couldn't send info to meta-server!
 Server is running version 3210
 Couldn't send info to meta-server!
-12 Aug 17:45:50: Welcome DarkAngel=root@theforest.demon.co.uk (0.0.0.0/0)
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+13 Aug 17:50:56: Welcome DarkAngel=root@theforest.demon.co.uk (0.0.0.0/0)
 Savefile does not exist for player DarkAngel.
 No object (6,10)No object (6,11)No object (6,12)No object (6,13)No object (6,14)No object (6,15)No object (6,16)No object (6,17)No object (6,18)No object (6,19)No object (6,20)No object (6,21)No object (6,22)No object (6,23)No object (6,24)No object (6,25)No object (6,26)No object (6,27)No object (6,28)No object (6,29)No object (6,30)No object (6,31)No object (6,32)No object (6,33)No object (6,34)No object (6,35)No object (6,36)No object (6,37)No object (6,38)No object (6,39)No object (6,40)No object (6,41)No object (6,42)No object (6,43)No object (6,44)No object (6,45)No object (6,46)No object (6,47)No object (6,48)No object (6,49)No object (6,50)No object (6,51)No object (6,52)No object (6,53)No object (6,54)No object (6,55)No object (6,56)No object (6,57)No object (6,58)No object (6,59)No object (6,60)No object (6,61)No object (6,62)No object (6,63)No object (6,64)No object (6,65)No object (6,66)No object (6,67)No object (6,68)No object (6,69)No object (6,70)No object (6,71)No object (6,72)No object (6,73)No object (6,74)No object (6,75)No object (6,76)No object (6,77)No object (6,78)No object (6,79)No object (6,80)No object (6,81)No object (6,82)No object (6,83)No object (6,84)No object (6,85)No object (6,86)No object (6,87)No object (6,88)No object (6,89)No object (6,90)No object (6,91)No object (6,92)No object (6,93)No object (6,94)No object (6,95)No object (6,96)No object (6,97)No object (6,98)No object (6,99)No object (6,100)No object (6,101)No object (6,102)No object (6,103)No object (6,104)No object (6,105)No object (6,106)No object (6,107)No object (6,108)No object (6,109)No object (6,110)No object (6,111)No object (6,112)No object (6,113)No object (6,114)No object (6,115)No object (6,116)No object (6,117)No object (6,118)No object (6,119)No object (6,120)No object (6,121)No object (6,122)No object (6,123)No object (6,124)No object (6,125)No object (6,126)No object (6,127)No object (6,128)No object (6,129)No object (6,130)No object (6,131)No object (6,132)No object (6,133)No object (6,134)No object (6,135)No object (6,136)No object (6,137)No object (6,138)No object (6,139)No object (6,140)No object (6,141)No object (6,142)No object (6,143)No object (6,144)No object (6,145)No object (6,146)No object (6,147)No object (6,148)No object (6,149)No object (6,150)No object (6,151)No object (6,152)No object (6,153)No object (6,154)No object (6,155)No object (6,156)No object (6,157)No object (6,158)No object (6,159)No object (6,160)No object (6,161)No object (6,162)No object (6,163)No object (6,164)No object (6,165)No object (6,166)No object (6,167)No object (6,168)No object (6,169)No object (6,170)No object (6,171)No object (6,172)No object (6,173)No object (6,174)No object (6,175)No object (6,176)No object (6,177)No object (6,178)No object (6,179)No object (6,180)No object (6,181)No object (6,182)No object (6,183)No object (6,184)No object (6,185)No object (6,186)No object (6,187)No object (6,188)No object (6,189)No object (6,190)No object (6,191)No object (6,192)No object (6,193)No object (6,194)No object (6,195)No object (6,196)No object (6,197)No object (6,198)No object (6,199)Couldn't send info to meta-server!
 Couldn't send info to meta-server!
@@ -44,6 +46,51 @@ Couldn't send info to meta-server!
 Couldn't send info to meta-server!
 Couldn't send info to meta-server!
 Couldn't send info to meta-server!
-12 Aug 17:48:32: Goodbye DarkAngel=root@theforest.demon.co.uk ("client quit")
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+13 Aug 17:55:33: Goodbye DarkAngel=root@theforest.demon.co.uk ("Committed suicide")
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+13 Aug 17:55:59: Welcome Evileye=root@theforest.demon.co.uk (0.0.0.0/0)
+Savefile does not exist for player Evileye.
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+13 Aug 18:06:00: Goodbye Evileye=root@theforest.demon.co.uk ("client quit")
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
+Couldn't send info to meta-server!
 Couldn't send info to meta-server!
 Couldn't send info to meta-server!
